fix most of APIs
