# src/model/subscriber.model.ts
@@ -3,7 +3,7 @@ import {GeneralUtils} from "@asmtechno/service-lib";
 export interface SubscriptionInfo {
     notificationQueue: string,
     groupCriteria: string [],
-    deleteGroupOnAck: boolean,
+    popupAck: boolean,
     subscriberUID: string
 }
 
@@ -12,12 +12,12 @@ export class Subscriber {
     readonly groupCriteria: string [];
     readonly UID: string;
     readonly ts: number;
-    readonly deleteGroupOnAck: boolean;
+    readonly popupAck: boolean;
     constructor(subscriptionInfo: SubscriptionInfo) {
         this.UID = subscriptionInfo?.subscriberUID || GeneralUtils.newGuid();
         this.notificationQueue = subscriptionInfo.notificationQueue;
         this.groupCriteria = subscriptionInfo.groupCriteria;
-        this.deleteGroupOnAck = subscriptionInfo?.deleteGroupOnAck || false;
+        this.popupAck = subscriptionInfo?.popupAck || false;
         this.ts = Date.now();
     }
 }
